--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,83 +27,83 @@ env:
 
 jobs:
 
-  # docker_publish:
-  #   name: 🐳 DockerHub Publish
-  #   runs-on: ubuntu-latest
+  docker_publish:
+    name: 🐳 DockerHub Publish
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: "☁️ Check out Git Repository"
-  #       uses: actions/checkout@v2
+    steps:
+      - name: "☁️ Check out Git Repository"
+        uses: actions/checkout@v2
 
-  #     - name: "🔧 Set up Node"
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: ${{ env.NODE_VERSION }}
+      - name: "🔧 Set up Node"
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ env.NODE_VERSION }}
 
-  #     - name: "⚡ Cache [CLIENT] node modules"
-  #       uses: actions/cache@v2
-  #       id: npm_client_cache_id
-  #       with:
-  #         path: ./client/node_modules
-  #         key: client-${{ runner.os }}-npm-cache-${{ hashFiles('./client/package-lock.json') }}
-  #         restore-keys: |
-  #           client-${{ runner.os }}-npm-cache-
-  #           client-${{ runner.os }}-
+      - name: "⚡ Cache [CLIENT] node modules"
+        uses: actions/cache@v2
+        id: npm_client_cache_id
+        with:
+          path: ./client/node_modules
+          key: client-${{ runner.os }}-npm-cache-${{ hashFiles('./client/package-lock.json') }}
+          restore-keys: |
+            client-${{ runner.os }}-npm-cache-
+            client-${{ runner.os }}-
 
-  #     - name: "📦 Install [CLIENT] dependencies"
-  #       working-directory: ./client
-  #       if: steps.npm_client_cache_id.outputs.cache-hit != 'true'
-  #       run: npm install
+      - name: "📦 Install [CLIENT] dependencies"
+        working-directory: ./client
+        if: steps.npm_client_cache_id.outputs.cache-hit != 'true'
+        run: npm install
 
-  #     - name: "⚡ Cache [SERVER] node modules"
-  #       uses: actions/cache@v2
-  #       id: npm_server_cache_id
-  #       with:
-  #         path: ./server/node_modules
-  #         key: server-${{ runner.os }}-npm-cache-${{ hashFiles('./server/package-lock.json') }}
-  #         restore-keys: |
-  #           server-${{ runner.os }}-npm-cache-
-  #           server-${{ runner.os }}-
+      - name: "⚡ Cache [SERVER] node modules"
+        uses: actions/cache@v2
+        id: npm_server_cache_id
+        with:
+          path: ./server/node_modules
+          key: server-${{ runner.os }}-npm-cache-${{ hashFiles('./server/package-lock.json') }}
+          restore-keys: |
+            server-${{ runner.os }}-npm-cache-
+            server-${{ runner.os }}-
 
-  #     - name: "📦 Install [SERVER] dependencies"
-  #       working-directory: ./server
-  #       if: steps.npm_server_cache_id.outputs.cache-hit != 'true'
-  #       run: npm install
+      - name: "📦 Install [SERVER] dependencies"
+        working-directory: ./server
+        if: steps.npm_server_cache_id.outputs.cache-hit != 'true'
+        run: npm install
 
-  #     - name: "🔒 Login to DockerHub"
-  #       uses: docker/login-action@v1
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: "🔒 Login to DockerHub"
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-  #     - name: 🔧 Create .env file
-  #       run: |
-  #         echo ${{ secrets.ENV_PRODUCTION }} > .env
-  #         cp .env ./client/.env
+      - name: 🔧 Create .env file
+        run: |
+          echo ${{ secrets.ENV_PRODUCTION }} > .env
+          cp .env ./client/.env
 
-  #     - name: 🐳 DockerHub Publish
-  #       run:
-  #         docker-compose build &&
-  #         docker-compose push
+      - name: 🐳 DockerHub Publish
+        run:
+          docker-compose build &&
+          docker-compose push
 
-  #     ## - name: "🔧 Set up Docker Buildx"
-  #     ##   uses: docker/setup-buildx-action@v1
+      # - name: "🔧 Set up Docker Buildx"
+      #   uses: docker/setup-buildx-action@v1
 
-  #     ## - name: "🐳 Publish to DockerHub Registry"
-  #     ##   uses: docker/build-push-action@v2
-  #     ##   env:
-  #     ##     DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}
-  #     ##   with:
-  #     ##     context: ${{ env.working-directory }}
-  #     ##     file: Dockerfile
-  #     ##     builder: ${{ steps.buildx.outputs.name }}
-  #     ##     push: true
-  #     ##     tags: ${{ env.DOCKERHUB_REPO }}:latest
-  #     ##     cache-from: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache
-  #     ##     cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
+      # - name: "🐳 Publish to DockerHub Registry"
+      #   uses: docker/build-push-action@v2
+      #   env:
+      #     DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}
+      #   with:
+      #     context: ${{ env.working-directory }}
+      #     file: Dockerfile
+      #     builder: ${{ steps.buildx.outputs.name }}
+      #     push: true
+      #     tags: ${{ env.DOCKERHUB_REPO }}:latest
+      #     cache-from: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache
+      #     cache-to: type=registry,ref=${{ env.DOCKERHUB_REPO }}:buildcache,mode=max
 
   deploy_ec2:
-    # needs: [docker_publish]
+    needs: [docker_publish]
     name: 🚀 EC2 Depoyment
     runs-on: ubuntu-latest
 
