--- a/.github/workflows/production copyTEMP.yml
+++ b/.github/workflows/production copyTEMP.yml
@@ -8,19 +8,7 @@ on:
 
 jobs:
 
-  node_ci:
-    name: 🧪 Node CI
-    uses: ./.github/workflows/node_ci.yml
-    with:
-      ENVIRONMENT: CI
-    secrets:
-      CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
-
-  docker_ci:
-    name: 🧪 Docker CI
-    uses: ./.github/workflows/docker_ci.yml
-
-  # end_to_end_tests:
+   # end_to_end_tests:
   #   name: 🧪 Docker E2E
   #   uses: ./.github/workflows/end_to_end.yml
   #   with:
@@ -40,7 +28,6 @@ jobs:
   #     REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
 
   publish_docker_client:
-    needs: [node_ci, docker_ci]
     name: "🐳 Build/Publish Docker (CLIENT) Image"
     environment: production
     runs-on: ubuntu-latest
@@ -145,117 +132,7 @@ jobs:
             REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}
             REACT_APP_FIREBASE_MEASUREMENT_ID=${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
           # cache-from: type=local,src=/tmp/.buildx-cache-${{ env.working-directory }}
-          # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
-
-  publish_docker_server:
-    needs: [node_ci, docker_ci]
-    name: "🐳 Build/Publish Docker (SERVER) Image"
-    environment: production
-    runs-on: ubuntu-latest
-    env:
-     working-directory: server
-
-    steps:
-      - name: "☁️ Check out Git Repository"
-        uses: actions/checkout@v2
-
-      - name: "🔧 Set up Node"
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
-
-      - name: "⚡ Cache node modules"
-        uses: actions/cache@v3
-        id: cache
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-
-      - name: "📦 Install dependencies"
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: npm install
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      # So now you can use Actions' own caching!
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache-${{ env.working-directory }}
-          key: ${{ env.working-directory }}-${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ env.working-directory }}-${{ runner.os }}-buildx-${{ github.sha }}
-
-      - name: "🔧 Create .env file"
-        run: |
-          rm -f .env
-          touch .env
-          printf "NODE_ENV=\"${{ secrets.NODE_ENV }}\"
-          SERVER_URL=\"${{ secrets.SERVER_URL }}\"
-          PORT=\"${{ secrets.PORT }}\"
-          MONGODB_URL=\"${{ secrets.MONGODB_URL }}\"
-          SKIP_PREFLIGHT_CHECK=\"${{ secrets.SKIP_PREFLIGHT_CHECK }}\"
-          REACT_APP_FIREBASE_API_KEY=\"${{ secrets.REACT_APP_FIREBASE_API_KEY }}\"
-          REACT_APP_FIREBASE_AUTH_DOMAIN=\"${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}\"
-          REACT_APP_FIREBASE_PROJECT_ID=\"${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}\"
-          REACT_APP_FIREBASE_STORAGE_BUCKET=\"${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}\"
-          REACT_APP_FIREBASE_MESSAGING_SENDER_ID=\"${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}\"
-          REACT_APP_FIREBASE_APP_ID=\"${{ secrets.REACT_APP_FIREBASE_APP_ID }}\"
-          REACT_APP_FIREBASE_MEASUREMENT_ID=\"${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}\"" >> .env
-
-          NODE_ENV=${{ secrets.NODE_ENV }}
-          SERVER_URL=${{ secrets.SERVER_URL }}
-          PORT=${{ secrets.PORT }}
-          MONGODB_URL=${{ secrets.MONGODB_URL }}
-          SKIP_PREFLIGHT_CHECK=${{ secrets.SKIP_PREFLIGHT_CHECK }}
-          REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }}
-          REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
-          REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
-          REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
-          REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
-          REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}
-          REACT_APP_FIREBASE_MEASUREMENT_ID=${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
-
-
-          NODE_ENV=${{ secrets.NODE_ENV }}
-          SERVER_URL=${{ secrets.SERVER_URL }}
-          PORT=${{ secrets.PORT }}
-          MONGODB_URL=${{ secrets.MONGODB_URL }}
-          SKIP_PREFLIGHT_CHECK=${{ secrets.SKIP_PREFLIGHT_CHECK }}
-          REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }}
-          REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
-          REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
-          REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
-          REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
-          REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}
-          REACT_APP_FIREBASE_MEASUREMENT_ID=${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
-
-      - name: "🔒 Login to DockerHub"
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: "🐋 Publish to DockerHub Registry"
-        uses: docker/build-push-action@v2
-        env:
-          DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_SERVER_REPO }}
-        with:
-          context: ./${{ env.working-directory }}
-          file: ./${{ env.working-directory }}/Dockerfile
-          builder: ${{ steps.buildx.outputs.name }}
-          push: true
-          tags: ${{ env.DOCKERHUB_REPO }}:latest
-          # cache-from: type=local,src=/tmp/.buildx-cache-${{ env.working-directory }}
-          # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
+          # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }
 
   verify_ec2:
     needs: [publish_docker_client] # publish_docker_server,
@@ -398,7 +275,6 @@ jobs:
             echo -e "$GREEN EC2 deployment complete! $NC"
 
   heroku_deploy:
-    needs: [node_ci]
     # https://github.com/marketplace/actions/deploy-to-heroku
     name: ⚛️ Heroku Deploy (BACKEND)
     runs-on: ubuntu-latest
