--- a/.github/workflows/production_restart.yml
+++ b/.github/workflows/production_restart.yml
@@ -1,4 +1,4 @@
-name: Deploy Docker
+name: Redeployment
 
 on:
   workflow_dispatch:
@@ -6,7 +6,6 @@ on:
 jobs:
 
   publish_docker_client:
-    needs: [node_ci]
     name: "🐳 Build/Publish Docker (CLIENT) Image"
     environment: production
     runs-on: ubuntu-latest
@@ -109,7 +108,6 @@ jobs:
           # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
 
   publish_docker_server:
-    needs: [node_ci]
     name: "🐳 Build/Publish Docker (SERVER) Image"
     environment: production
     runs-on: ubuntu-latest
